--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "node-fetch": "^3.2.4",
     "node-fetch-cjs": "^3.2.4",
-    "ping-monitor": "^0.6.2"
+    "ping-monitor": "^0.6.2",
+    "random-animals-api": "^1.2.6"
   }
 }
